# ai-mafia

./: .gitignore  Makefile  README copy.md  README.md  fastapi.py  game_rules.json  greeting_cluster.py  joke_bot.py  mafia_script.py  main.py  night.py  npc.py  ping_pong_bot.py  pyproject.toml  run_llm.sh  run_synchronizer.py  shooting.py  start_game.py  test.ipynb  tg_proxy.py  voiting.py  voting.py
ai_mafia/: constants.py  start_game.py  types.py
ai_mafia/config/: __init__.py  config.yaml  loader.py  models.py
ai_mafia/db/: config.yaml  models.py  routines.py  setup.py
ai_mafia/llm/: __init__.py  llm_do.py
ai_mafia/sync/: __init__.py  polling.py  synchronizer.py
ai_mafia/tg_proxy/: __init__.py  chatsky_web_api.py  converting.py
